--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
         </nav>
     </header>
     <main>
-        
         <section class="banner">
             <div>
                     <h1 class="titulo">OVERFIX STREETWEAR</h1>
             </div>
+            <section>
+                <h2>
+                    PRODUCTOS
+                </h2>
+            </section>
         </section>
-            <div class="container-productos">
-                <h2>NOVEDADES</h2>
+            <div class="container-productos">   
                 <article class="card-container article1">
-                    <div>
+            <div>
                         <img src="assets/IMAGENES/remera-negra.jpg">
                     </div>
                     <h3>PRODUCTO 1</h3>
