--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -26,7 +26,7 @@
                 <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
             </div>
             <h3>PRODUCTO 1</h3>
-            <p>informacion del procuto</p>
+            <p>informacion del producto</p>
             <button>comprar</button>
         </article>
         <article class="card-container article2">
@@ -34,7 +34,7 @@
                 <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
             </div>
             <h3>PRODUCTO 2</h3>
-            <p>informacion del procuto</p>
+            <p>informacion del producto</p>
             <button>comprar</button>
         </article>
         <article class="card-container article3">
@@ -42,7 +42,7 @@
                 <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
             </div>
             <h3>PRODUCTO 3</h3>
-            <p>informacion del procuto</p>
+            <p>informacion del producto</p>
             <button>comprar</button>
         </article>
         <article class="card-container article4">
@@ -50,7 +50,7 @@
                 <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
             </div>
             <h3>PRODUCTO 4</h3>
-            <p>informacion del procuto</p>
+            <p>informacion del producto</p>
             <button>comprar</button>
         </article>
         <article class="card-container article4">
@@ -58,7 +58,7 @@
                 <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
             </div>
             <h3>PRODUCTO 5</h3>
-            <p>informacion del procuto</p>
+            <p>informacion del producto</p>
             <button>comprar</button>
         </article>
         <article class="card-container article4">
@@ -66,7 +66,7 @@
                 <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
             </div>
             <h3>PRODUCTO 6</h3>
-            <p>informacion del procuto</p>
+            <p>informacion del producto</p>
             <button>comprar</button>
         </article>
         <article class="card-container article4">
@@ -74,7 +74,7 @@
                 <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
             </div>
             <h3>PRODUCTO 7</h3>
-            <p>informacion del procuto</p>
+            <p>informacion del producto</p>
             <button>comprar</button>
         </article>
         <article class="card-container article4">
@@ -82,14 +82,53 @@
                 <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
             </div>
             <h3>PRODUCTO 8</h3>
-            <p>informacion del procuto</p>
+            <p>informacion del producto</p>
             <button>comprar</button>
         </article>
     </section>
     </main>
 
-    <footer>
-        
+    <footer class="footer">
+        <ul class="social-icon">
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-whatsapp"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="phone-portrait-outline"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+            </li>
+        </ul>
+        <ul class="menu">
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Inicio</a>
+            </li>
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Contacto</a>
+            </li>
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Preguntas frecuentes</a>
+            </li>
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Nosotros</a>
+            </li>
+        </ul>
+        <p class="text"> 2024 | Todos los derechos reservados </p>
+
     </footer>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
