--- a/pages/cambios.html
+++ b/pages/cambios.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <section class="banner">
+        <section class="cambios">
             <h1>CAMBIOS</h1>
             <h2>POLITICA DE CAMBIOS</h2>
             <P>
@@ -33,10 +33,45 @@
         </section>
     </main>
     <footer class="footer">
-            <p>
-    CONTACTANOS
-            </p>
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, iusto sequi. Amet pariatur provident consequatur illo temporibus a vitae aliquam sint. Ducimus incidunt vero exercitationem quasi odio reiciendis, ipsum provident?</h1>
-        </footer>
+        <ul class="social-icon">
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-whatsapp"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="phone-portrait-outline"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+            </li>
+        </ul>
+        <ul class="menu">
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Inicio</a>
+            </li>
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Contacto</a>
+            </li>
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Preguntas frecuentes</a>
+            </li>
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Nosotros</a>
+            </li>
+        </ul>
+        <p class="text"> 2024 | Todos los derechos reservados </p>
+
+    </footer>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
 </html>
