--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
@@ -18,13 +19,61 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h1>NOSOTROS</h1>
+        <section class="nosotros" id="nosotros">
+        <div class="nosotros__bg section">
+            <div class="nosotros__data">
+                <h2 class="section_title">
+                    Nuestra Historia
+                </h2>
+
+                <p class="nosotros_descripcion">
+                    Nuestra indumentaria
+                </p>
+            </div>
+
+        </div>
         </section>
     </main>
 
-    <footer>
-        
+    <footer class="footer">
+        <ul class="social-icon">
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-whatsapp"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="phone-portrait-outline"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+            </li>
+        </ul>
+        <ul class="menu">
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Inicio</a>
+            </li>
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Contacto</a>
+            </li>
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Preguntas frecuentes</a>
+            </li>
+            <li class="menu-elem"> 
+                <a href="" class="menu-icon"> Nosotros</a>
+            </li>
+        </ul>
+        <p class="text"> 2024 | Todos los derechos reservados </p>
+
     </footer>
 </body>
 </html>
