--- a/index.html
+++ b/index.html
@@ -29,36 +29,39 @@
             <div>
                     <h1 class="titulo">OVERFIX STREETWEAR</h1>
             </div>
-            <section>
-                <h2>
-                    PRODUCTOS
-                </h2>
-            </section>
-        </section>
-            <div class="container-productos">   
-                <article class="card-container article1">
-            <div>
+    </section>
+    <section  class="titulo-productos">
+        <h2>
+            PRODUCTOS
+        </h2>
+    </section>
+    <section>
+            <div class="container-productos">                 
+                <article class="card-container">
+                    <div>
                         <img src="assets/IMAGENES/remera-negra.jpg">
                     </div>
-                    <h3>PRODUCTO 1</h3>
+                    <h2>Remera Over BLACK</h2>
                     <p>$30.000</p>
-                    <button class="boton-comprar">Comprar</button>
+                    <button class="boton-comprar">Añadir al carrito</button>
                 </article>
-                <article class="card-container article2">
-                    <div>
-                        <img src="./assets/IMAGENES/hombre-moda-mirandose-espejo.jpg" alt="">
-                    </div>
-                    <h3>PRODUCTO 2</h3>
-                    <p>$30.000</p>
-                    <button class="boton-comprar">Comprar</button>
-                </article>
-                <article class="card-container article3">
+                <section>
+                    <article class="card-container">
+                        <div>
+                            <img src="./assets/IMAGENES/hombre-moda-mirandose-espejo.jpg" alt="">
+                        </div>
+                            <h2>Jean Beige Recto</h2>
+                                <p>$30.000</p>
+                    <button class="boton-comprar">Añadir al carrito</button>
+                    </article>
+                </section>
+                <article class="card-container">
                     <div>
                         <img src="./assets/IMAGENES/hombre-jeans-azul-camiseta-blanca.jpg" alt="">
                     </div>
-                    <h3>PRODUCTO 3</h3>
+                    <h2>Remera Over White</h2>
                     <p>$30.000</p>
-                    <button class="boton-comprar">Comprar</button>
+                    <button class="boton-comprar">Añadir al carrito</button>
                 </article>
                 
         </section>
