--- a/pages/cambios.html
+++ b/pages/cambios.html
@@ -10,11 +10,11 @@
     <header>
         <nav>
             <ul class="navbar">
-                <li> <a href="../index.html">INICIO</a></li>
-                <li> <a href="./tienda.html">TIENDA</a></li>
-                <li> <a href="#">CAMBIOS</a></li>
-                <li> <a href="./nosotros.html">NOSOTROS</a></li>
-                <li> <a href="./preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a></li>
+                <li class="encabezado"> <a href="../index.html">INICIO</a></li>
+                <li class="encabezado"> <a href="./tienda.html">TIENDA</a></li>
+                <li class="encabezado"> <a href="#">CAMBIOS</a></li>
+                <li class="encabezado"> <a href="./nosotros.html">NOSOTROS</a></li>
+                <li class="encabezado"> <a href="./preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a></li>
             </ul>
         </nav>
     </header>
