--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -11,11 +11,11 @@
 
         <nav>
             <ul class="navbar">
-                <li> <a href="../index.html">INICIO</a></li>
-                <li> <a href="./tienda.html">TIENDA</a></li>
-                <li> <a href="./cambios.html">CAMBIOS</a></li>
-                <li> <a href="./nosotros.html">NOSOTROS</a></li>
-                <li> <a href="#">PREGUNTAS FRECUENTES</a></li>
+                <li class="encabezado"> <a href="../index.html">INICIO</a></li>
+                <li class="encabezado"> <a href="./tienda.html">TIENDA</a></li>
+                <li class="encabezado"> <a href="./cambios.html">CAMBIOS</a></li>
+                <li class="encabezado"> <a href="./nosotros.html">NOSOTROS</a></li>
+                <li class="encabezado"> <a href="#">PREGUNTAS FRECUENTES</a></li>
             </ul>
         </nav>
                 
@@ -24,7 +24,7 @@
         <section class="registro">
             <h1>PREGUNTAS FRECUENTES</h1>
             <section class="form-registro">
-                <h4>Formulario Registro</h4>
+                <h4>Consultas</h4>
                     <input class="controls" type="text" name="nombre" id="Nombres" placeholder="Ingrese su Nombre">
                     <input class="controls" type="text" name="nombre" id="Apellidos" placeholder="Ingrese su Apellido">
                     <input class="controls" type="email" name="nombre" id="Email" placeholder="Ingrese su correo">
