--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -10,82 +10,42 @@
     <header>
         <nav>
             <ul class="navbar">
-                <li> <a href="../index.html">INICIO</a></li>
-                <li> <a href="#">TIENDA</a></li>
-                <li> <a href="./cambios.html">CAMBIOS</a></li>
-                <li> <a href="./nosotros.html">NOSOTROS</a></li>
-                <li> <a href="./preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a></li>
+                <li class="encabezado"> <a href="../index.html">INICIO</a></li>
+                <li class="encabezado"> <a href="#">TIENDA</a></li>
+                <li class="encabezado"> <a href="./cambios.html">CAMBIOS</a></li>
+                <li class="encabezado"> <a href="./nosotros.html">NOSOTROS</a></li>
+                <li class="encabezado"> <a href="./preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="container-productos"> 
-            <h1>TIENDA</h1>
-        <article class="card-container article1">
-            <div>
-                <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
-            </div>
-            <h3>PRODUCTO 1</h3>
-            <p>informacion del producto</p>
-            <button>comprar</button>
-        </article>
-        <article class="card-container article2">
-            <div>
-                <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
-            </div>
-            <h3>PRODUCTO 2</h3>
-            <p>informacion del producto</p>
-            <button>comprar</button>
-        </article>
-        <article class="card-container article3">
-            <div>
-                <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
-            </div>
-            <h3>PRODUCTO 3</h3>
-            <p>informacion del producto</p>
-            <button>comprar</button>
-        </article>
-        <article class="card-container article4">
-            <div>
-                <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
-            </div>
-            <h3>PRODUCTO 4</h3>
-            <p>informacion del producto</p>
-            <button>comprar</button>
-        </article>
-        <article class="card-container article4">
-            <div>
-                <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
-            </div>
-            <h3>PRODUCTO 5</h3>
-            <p>informacion del producto</p>
-            <button>comprar</button>
-        </article>
-        <article class="card-container article4">
-            <div>
-                <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
-            </div>
-            <h3>PRODUCTO 6</h3>
-            <p>informacion del producto</p>
-            <button>comprar</button>
-        </article>
-        <article class="card-container article4">
-            <div>
-                <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
-            </div>
-            <h3>PRODUCTO 7</h3>
-            <p>informacion del producto</p>
-            <button>comprar</button>
-        </article>
-        <article class="card-container article4">
-            <div>
-                <img src="../assets/IMAGENES/gen-z-people-exploring-absurdist-fashion-beauty.jpg">
-            </div>
-            <h3>PRODUCTO 8</h3>
-            <p>informacion del producto</p>
-            <button>comprar</button>
-        </article>
-    </section>
+        <div class="container-productos">                 
+            <article class="card-container">
+                <div>
+                    <img src="../assets/IMAGENES/hombre-jeans-azul-camiseta-blanca.jpg">
+                </div>
+                <h2>Remera Over BLACK</h2>
+                <p>$30.000</p>
+                <button class="boton-comprar">Añadir al carrito</button>
+            </article>
+            <section>
+                <article class="card-container">
+                    <div>
+                        <img src="../assets/IMAGENES/hombre-moda-mirandose-espejo.jpg" alt="">
+                    </div>
+                        <h2>Jean Beige Recto</h2>
+                            <p>$30.000</p>
+                <button class="boton-comprar">Añadir al carrito</button>
+                </article>
+            </section>
+            <article class="card-container article3">
+                <div>
+                    <img src="../assets/IMAGENES/beautiful-blonde-girl-white-oversized-tshirt-blue-jeans-posing-gray-background.jpg" alt="">
+                </div>
+                <h2>Remera Over White</h2>
+                <p>$30.000</p>
+                <button class="boton-comprar">Añadir al carrito</button>
+            </article>
     </main>
 
     <footer class="footer">
